--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -18,6 +18,19 @@ a
 .clear
   clear:both
 
+footer
+  text-align center
+  border 1px solid #ccc
+  border-bottom 0
+  padding 10px 0
+  .footer-menu
+    ul
+      margin-left 0
+    li
+      list-style none
+      margin 0 10px
+      display inline-block
+
 transform()
   -moz-transform rotate(arguments); /* Для Firefox */
   -ms-transform rotate(arguments); /* Для IE */
@@ -101,6 +114,7 @@ transform()
 
 .shop
   border-left 1px solid #ccc
+  border-right 1px solid #ccc
 
 .main-content
   margin-right 380px
@@ -122,24 +136,6 @@ transform()
     display none
   .hide-right
     display none
-  /*.sidebar-title
-    font-size 20px
-    border-top 1px solid #ccc
-    padding 4px 0 7px 0
-    background #f9f9f9
-    text-align center
-    color #2b7dbc
-    .go-to-orders
-      display inline-block
-      vertical-align middle
-      margin-right 10px
-  nav
-    display inline-block
-    vertical-align middle
-    width 70%
-    .input-group
-    a
-      display block*/
   .tabs-days
     margin-top 82px
     text-align center
@@ -304,15 +300,6 @@ th.next
   text-decoration none
 .ui-menu-item a:hover
   text-decoration none
-
-.breadcrambs
-  margin-bottom 10px
-  a
-    font-weight normal
-  span
-    display inline-block
-    margin 0 2px
-  span
 
 .shop-menu
   overflow auto
