--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -15,6 +15,12 @@ a {
 }
 footer {
   text-align: center;
+  position: absolute;
+  background: #fff;
+  width: 100%;
+  bottom: 0;
+}
+footer .container {
   border: 1px solid #ccc;
   border-bottom: 0;
   padding: 10px 0;
@@ -31,11 +37,18 @@ footer .footer-menu li {
 .header-color-blue2 {
   background-color: #438eb9 !important;
 }
+.wrap {
+  min-height: 100%;
+  padding-bottom: 70px;
+  position: relative;
+}
 .container {
   padding: 0;
   max-width: 1240px;
   min-height: 100%;
 }
+/* &.main
+    padding-bottom 70px*/
 .navbar a.navbar-brand {
   padding: 0;
 }
@@ -850,10 +863,12 @@ height 50px
 @media all and (max-width: 990px) {
   .shop-right {
     position: fixed;
+    margin-top: -45px;
     height: 100%;
     right: -380px;
     z-index: 10;
     padding: 0 0 20px 0;
+    padding-top: 65px;
     border-bottom: 1px solid #ccc;
     overflow: auto;
   }
@@ -1074,6 +1089,7 @@ height 50px
 .confirm-order .weight-right {
   float: right;
   clear: right;
+  padding-right: 10px;
   padding-top: 15px;
   font-size: 16px;
 }
@@ -1081,8 +1097,10 @@ height 50px
 .confirm-order .weight-right span {
   font-weight: bold;
 }
+.confirm-order .additionally-order {
+  padding: 0 10px;
+}
 .confirm-order .delivery-right {
-  padding-left: 10px;
   margin-top: 40px;
 }
 .confirm-order .delivery-right h3 {
@@ -1090,9 +1108,6 @@ height 50px
 }
 .confirm-order .delivery-right #phone-delivery {
   width: 250px;
-}
-.confirm-order .delivery-right .input-delivery {
-  padding-right: 10px;
 }
 .confirm-order .delivery-right .input-delivery .lbl {
   font-size: 16px;
@@ -1145,9 +1160,10 @@ height 50px
 .confirm-order .additionally-order .btn-cancel {
   float: right;
   margin-left: 10px;
+  margin-bottom: 10px;
 }
 .confirm-order textarea {
-  margin: 10px;
+  margin: 10px 0;
   width: 100%;
   display: block;
   height: 80px;
@@ -1168,6 +1184,7 @@ height 50px
   min-width: 768px;
   width: 80%;
   margin: 0 auto;
+  margin-bottom: 25px;
 }
 .order-end .order-end-in h3 {
   text-align: left;
