some cosmetic changes

--- a/vonline_be/war/landmain/css/bootstrap.css
+++ b/vonline_be/war/landmain/css/bootstrap.css
@@ -5783,3 +5783,8 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+.features .col-sm-6{
+	display: inline-block !important;
+	vertical-align: top !important;
+	float: none !important;
+}
