--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -183,7 +183,11 @@ transform()
     .basket-bottom
       .btn
         float right
-        margin 15px 10px 0 0
+        margin 1px 10px 0 0
+      .refresh
+        float left
+        cursor pointer
+        margin 10px 0 0 5px
   .catalog-order
     max-height 320px
     overflow-y auto
