--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -965,6 +965,12 @@ height 50px
           display inline-block
           vertical-align middle
           margin-left 40px
+  .refresh
+    float right
+    cursor pointer
+    margin 10px 10px 0 0
+    clear right
+    font-size 14px
   .itogo-right
   .weight-right
     float right
