правка съехавшего каталога продуктов в истории заказов

--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -549,6 +549,9 @@ th.next,
   margin: 10px 10px 0 0;
   display: none;
 }
+.shop-orders .order-item .order-products .catalog {
+  position: static;
+}
 .shop-orders .order-item .order-edit,
 .shop-orders .order-item .order-confirm {
   font-size: 12px;
