--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -481,6 +481,8 @@ th.next
     .order-products
       margin 10px 10px 0 0
       display none
+      .catalog
+        position static
     .order-edit
     .order-confirm
       font-size 12px
