--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1165,6 +1165,8 @@ height 50px
       text-decoration none
       color #000000
       cursor default
+    .catalog
+      position static
   .back-orders-top
     .form-group
       margin-right 565px
