--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1193,6 +1193,11 @@ height 50px
     display none
   .import-show
     display none
+    .import-btn-top
+      float right
+      margin-top -5px
+      .import-btn
+        margin-bottom 0
     .import-btn
       margin-bottom 10px
     .import-field-dropdown
