--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -1,6 +1,8 @@
 @import 'common.css'
 
 /* страница регистрации */
+.login-page .container
+  min-width 0
 .login-forms
   width 650px
   margin 30px auto
