--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -862,6 +862,24 @@ height 50px
     .main-content
       margin-left 0
 
+@media all and (max-width: 660px)
+  .product .modal
+    width 100%
+    left 0
+    margin-left 0
+    .modal-footer
+      width 100%
+      right 0
+      text-align center
+      >span
+        float left
+      .full-descr
+        clear both
+        margin-left -130px
+    .product-slider .slider img
+      max-width 120px
+      max-height 120px
+
 @media screen and (device-width: 320px)
    .container
       width 100%
