--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -986,8 +986,13 @@ height 50px
   .main-content {
     margin-right: 0;
   }
-  .catalog table tr td:first-child {
+  .catalog table tr td:first-child,
+  .catalog-head table td:first-child {
     width: 450px;
+  }
+  .catalog-head table td.td-basket {
+    width: 35px;
+    padding-right: 50px;
   }
 }
 @media all and (max-width: 768px),screen and (device-width: 320px) {
@@ -1577,8 +1582,18 @@ height 50px
   overflow: auto;
   overflow-y: hidden;
 }
-#doublescroll p {
-  margin: 0;
-  padding: 1em;
-  white-space: nowrap;
+.loading {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.loading img {
+  width: 50px;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
 }
