--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -839,7 +839,11 @@ height 50px
   .main-content
     margin-right 0
   .catalog table tr td:first-child
+  .catalog-head table td:first-child
     width 450px
+  .catalog-head table td.td-basket
+    width 35px
+    padding-right 50px
 
 @media all and (max-width: 768px),screen and (device-width: 320px)
   .sidebar#sidebar
@@ -1311,4 +1315,19 @@ height 50px
   display none
 
 #doublescroll { overflow: auto; overflow-y: hidden; }
-#doublescroll p { margin: 0; padding: 1em; white-space: nowrap; }
+
+.loading
+  //background rgba(0, 0, 0, .05)
+  //opacity .1
+  position absolute
+  width 100%
+  height 100%
+  top 0
+  left 0
+  display none
+  img
+    width 50px
+    display block
+    position absolute
+    left 50%
+    top 50%
