--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1597,3 +1597,9 @@ height 50px
   left: 50%;
   top: 50%;
 }
+.mypic {
+  background: url("../i/sprite.png");
+  background-position: 0 0;
+  width: 40px;
+  height: 40px;
+}
