--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1331,3 +1331,9 @@ height 50px
     position absolute
     left 50%
     top 50%
+
+.mypic
+  background url(../i/sprite.png)
+  background-position: 0 0;
+  width: 40px;
+  height: 40px;
