--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -23,10 +23,9 @@ footer {
   background: #fff;
   width: 100%;
   bottom: 0;
+  border-top: 1px solid #ccc;
 }
 footer .container {
-  border: 1px solid #ccc;
-  border-bottom: 0;
   padding: 10px 0;
 }
 footer .footer-menu ul {
@@ -57,6 +56,11 @@ footer .footer-menu li {
 .main-content,
 .shop-products {
   height: 100%;
+}
+.navbar {
+  position: fixed;
+  left: 0;
+  width: 100%;
 }
 .navbar a.navbar-brand {
   padding: 0;
@@ -129,6 +133,7 @@ footer .footer-menu li {
 .shop {
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
+  margin-top: 45px;
 }
 .main-content {
   margin-right: 480px;
@@ -140,8 +145,10 @@ footer .footer-menu li {
   position: relative;
 }
 .shop-right {
-  float: right;
+  position: fixed;
+  height: 100%;
   width: 470px;
+  margin-top: -45px;
   border: 0;
   border-left: 1px solid #ccc;
   padding-bottom: 20px;
@@ -158,7 +165,7 @@ footer .footer-menu li {
   display: none;
 }
 .shop-right .tabs-days {
-  margin-top: 84px;
+  margin-top: 129px;
   text-align: center;
 }
 .shop-right .tabs-days .nav span {
@@ -425,7 +432,6 @@ th.next,
 }
 .catalog {
   overflow: auto;
-  position: absolute;
   width: 100%;
 }
 .catalog table {
@@ -1422,6 +1428,7 @@ height 50px
 .backoffice .main-content {
   margin-left: 200px;
   margin-right: 0;
+  margin-top: 45px;
 }
 .backoffice .plus-minus {
   font-size: 24px;
