--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -174,7 +174,7 @@ transform()
   .hide-right
     display none
   .tabs-days
-    margin-top 129px
+    margin-top 109px
     text-align center
     .nav span
       display block
@@ -353,11 +353,11 @@ th.next
     li
       list-style none
       float left
-      margin-bottom 5px
+      margin-bottom 10px
       display inline-block
       margin-left 5px
-      width 80px
-      height 65px
+      width 95px
+      height 55px
       text-align center
       line-height 14px
       font-size 11px
@@ -367,12 +367,24 @@ th.next
       a
         display block
         font-size 20px
+        line-height 46px
+        height 50px
+        border 1px solid #438eb9
         &:hover
           text-decoration none
         span
           font-size 12px
-          display block
-
+          line-height 16px
+          display inline-block
+          vertical-align middle
+        .fa
+          display none
+        &.shopmenu-back
+          border 0
+          line-height 20px
+          font-size 26px
+          .fa
+            display block
 .catalog-head
   table
     background #f9f9f9
