--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -600,7 +600,7 @@ th.next,
 }
 .shop-orders .btn-primary {
   margin: 2px;
-  display: inline-block;
+  float: right;
 }
 .shop-orders .more-orders {
   text-align: center;
@@ -608,6 +608,20 @@ th.next,
 }
 .shop-orders .more-orders a {
   font-size: 16px;
+}
+.order-bottom {
+  margin-top: 5px;
+}
+.order-bottom .order-delivery {
+  font-size: 16px;
+  margin-right: 190px;
+  height: 34px;
+  line-height: 34px;
+}
+.order-bottom .order-delivery span {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 16px;
 }
 .ace-spinner {
   display: inline-block;
@@ -632,32 +646,25 @@ th.next,
   padding: 5px 0;
 }
 .orders-tbl .td1 {
-  width: 3%;
+  width: 4%;
 }
 .orders-tbl .td2 {
-  width: 19%;
+  width: 28%;
 }
 .orders-tbl .td3 {
-  width: 7%;
-}
-.orders-tbl .td4 {
   width: 12%;
 }
-.orders-tbl .td5 {
-  width: 21%;
+.orders-tbl .td4 {
+  width: 22%;
 }
 .orders-tbl .td6 {
-  width: 7%;
-}
-.orders-tbl .td7 {
-  width: 19%;
-  border: 0;
+  width: 12%;
 }
 .orders-tbl .td8 {
-  width: 6%;
+  width: 9%;
 }
 .orders-tbl .td9 {
-  width: 9%;
+  width: 12%;
 }
 .orders-tbl-wrap {
   margin-bottom: 10px;
@@ -674,33 +681,25 @@ th.next,
   padding: 5px 0;
 }
 .orders-tbl-wrap .td1 {
-  width: 3%;
+  width: 4%;
 }
 .orders-tbl-wrap .td2 {
-  width: 19%;
+  width: 28%;
 }
 .orders-tbl-wrap .td3 {
-  width: 7%;
-}
-.orders-tbl-wrap .td4 {
   width: 12%;
 }
-.orders-tbl-wrap .td5 {
-  width: 21%;
+.orders-tbl-wrap .td4 {
+  width: 22%;
 }
 .orders-tbl-wrap .td6 {
-  width: 7%;
-}
-.orders-tbl-wrap .td7 {
-  width: 19%;
-  border: 1px solid #fff;
-  background: #fff;
+  width: 12%;
 }
 .orders-tbl-wrap .td8 {
-  width: 6%;
+  width: 9%;
 }
 .orders-tbl-wrap .td9 {
-  width: 9%;
+  width: 12%;
 }
 .ace-spinner {
   width: 90px !important;
@@ -1466,6 +1465,15 @@ height 50px
 }
 .backoffice .plus-minus:hover {
   text-decoration: none;
+}
+.backoffice .order-item {
+  margin-bottom: 15px;
+}
+.backoffice .order-item .order-bottom {
+  margin-top: 0;
+}
+.backoffice .order-item .order-bottom .order-delivery {
+  margin-right: 0;
 }
 .backoffice .order-products {
   display: none;
