--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1309,8 +1309,10 @@ height 50px
       vertical-align middle
   .export-orders-checklist
   .export-orderLine-checklist
+  .export-products-checklist
+  .export-packs-checklist
     display inline-block
-    width 49%
+    //width 49%
     vertical-align top
   .export-table
     .export-single-table
@@ -1354,6 +1356,40 @@ height 50px
 
 #doublescroll { overflow: auto; overflow-y: hidden; }
 
+/* вырезка из плагина для multiselect */
+.ui-multiselect
+  text-align left
+  .ui-icon
+    color #fff
+    top 7px
+
+.ui-multiselect span.ui-icon { float:right }
+.ui-multiselect-single .ui-multiselect-checkboxes input { position:absolute !important; top: auto !important; left:-9999px; }
+.ui-multiselect-single .ui-multiselect-checkboxes label { padding:5px !important }
+
+.ui-multiselect-header { margin-bottom:3px; padding:3px 0 3px 4px }
+.ui-multiselect-header ul { font-size:0.9em }
+.ui-multiselect-header ul li { float:left; padding:0 10px 0 0; list-style: none; margin-bottom 5px }
+.ui-multiselect-header a { text-decoration:none }
+.ui-multiselect-header a:hover { text-decoration:underline }
+.ui-multiselect-header span.ui-icon { float:left }
+.ui-multiselect-header li.ui-multiselect-close { float:right; text-align:right; padding-right:0 }
+
+.ui-multiselect-menu { display:none; background #fff; box-shadow: 0 0 5px #ccc; padding:3px; position:absolute; z-index:10000; text-align: left }
+.ui-multiselect-close{display:none}
+.ui-multiselect-checkboxes { position:relative /* fixes bug in IE6/7 */; overflow-y:scroll ; clear:left; margin-left 0;}
+.ui-multiselect-checkboxes label {  cursor:pointer; margin-bottom : 2px; display:block; border:1px solid transparent; }
+.ui-multiselect-checkboxes label input { position:relative; top:1px; margin-right 5px }
+.ui-multiselect-checkboxes li { clear:both; font-size:0.9em; padding-right:3px; }
+.ui-multiselect-checkboxes li.ui-multiselect-optgroup-label { text-align:center; font-weight:bold; border-bottom:1px solid #428bca;border-top:1px solid #428bca }
+.ui-multiselect-checkboxes li.ui-multiselect-optgroup-label a { display:block; padding:3px; margin:1px 0; text-decoration:none }
+
+
+
+/* remove label borders in IE6 because IE6 does not support transparency */
+* html .ui-multiselect-checkboxes label { border:none; }
+/* --------------------------------- */
+
 .loading
   //background rgba(0, 0, 0, .05)
   //opacity .1
@@ -1369,3 +1405,4 @@ height 50px
     position absolute
     left 50%
     top 50%
+
