--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -968,10 +968,10 @@ height 50px
 
 /* popup логина */
 .modal-auth
-  width 644px
+  width 375px
   overflow hidden
-  height 290px
-  margin-left -327px
+  height 100%
+  margin-left -187px
   background none
   .login-forms
     margin 0
