--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1158,6 +1158,7 @@ height 50px
   height: 100%;
   margin-left: -187px;
   background: none;
+  top: 5%;
 }
 .modal-auth .login-forms {
   margin: 0;
