--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1030,6 +1030,9 @@ height 50px
     width: 35px;
     padding-right: 50px;
   }
+  footer.short-footer .container {
+    margin-right: 0;
+  }
 }
 @media all and (max-width: 768px), screen and (device-width: 320px) {
   .sidebar#sidebar {
