--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -874,6 +874,8 @@ height 50px
   .catalog-head table td.td-basket
     width 35px
     padding-right 50px
+  footer.short-footer .container
+    margin-right 0
 
 @media all and (max-width: 768px),screen and (device-width: 320px)
   .sidebar#sidebar
