--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -88,15 +88,16 @@ transform()
     height 45px
 
 .ace-nav>li
+  vertical-align top
+  a
+    padding 11px 12px 0 12px
+    line-height 1.428571429
+    font-size 16px
+    border none
+    border-bottom 3px solid rgb(111, 179, 224)
+  &.active
     a
-      padding 11px 12px 0 12px
-      line-height 1.428571429
-      font-size 16px
-      border none
-      border-bottom 3px solid rgb(111, 179, 224)
-    &.active
-      a
-        border-bottom-color #2b7dbc
+      border-bottom-color #2b7dbc
 
 .ace-nav>.user-short
   line-height 30px
@@ -841,20 +842,22 @@ height 50px
   .show-right
     display block
     position fixed
+    z-index 11
     top: 40%
-    right -28px
+    right -31px
     border-radius 5px 5px 0 0
     cursor pointer
     font-size 16px
     letter-spacing 1px
     border 1px solid #ccc
     background #ccc
-    padding 0 10px
+    padding 4px 15px
     transform -90deg;
   .shop-right
     margin-top -45px
     height 100%
     right -470px
+    display none
     z-index 10
     padding 0 0 20px 0
     padding-top 65px
@@ -865,7 +868,8 @@ height 50px
     .hide-right
       display block;
       position absolute
-      top 10px
+      top 50px
+      font-size 30px
       right 10px
       cursor pointer
   .main-content
@@ -918,6 +922,20 @@ height 50px
     .product-slider .slider img
       max-width 120px
       max-height 120px
+
+@media all and (max-width: 460px)
+  .ace-nav>li.user-short
+    float none !important
+  .navbar .navbar-header.pull-right
+    float right !important
+  .navbar-header:after
+    clear none !important
+
+@media only screen and (max-width: 320px)
+  .ace-nav>li a
+    padding-top 10px !important
+  .ace-nav>li.user-short a
+    padding-top 3px !important
 
 @media screen and (device-width: 320px)
    .container
