парвка для даты экспорта БО

--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -70,6 +70,8 @@
         display none
         .ui-helper-hidden-accessible
           display none
+        input
+          margin-bottom 10px
 
 .short.form-control
   width 75px !important
