--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -882,6 +882,8 @@ height 50px
     padding-right 50px
   footer.short-footer .container
     margin-right 0
+  .close
+    font-size 30px
 
 @media all and (max-width: 768px),screen and (device-width: 320px)
   .sidebar#sidebar
