--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -92,6 +92,9 @@
 .user-descr .text-area .user-body .form-edit .ui-helper-hidden-accessible {
   display: none;
 }
+.user-descr .text-area .user-body .form-edit input {
+  margin-bottom: 10px;
+}
 .short.form-control {
   width: 75px !important;
 }
