--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1305,7 +1305,7 @@ height 50px
     .import-table
       /*overflow-x auto
       overflow-y visible*/
-      //position relative
+      position relative
       margin-bottom 10px
       &.y-overflow-hidden
         overflow-y hidden
