--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -1,12 +1,13 @@
 @import 'common.css'
 
 /* страница регистрации */
-.widget-box
-  visibility hidden
-  display none
-  &.visible
-    visibility visible
-    display block
+.login-container
+  .widget-box
+    visibility hidden
+    display none
+    &.visible
+      visibility visible
+      display block
 
 .login-box
 .signup-box
