--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -410,7 +410,7 @@ th.next
     td
       text-align center
       &:first-child
-        width 60%
+        width 50%
         text-align left
       &.td-basket
         padding-right 50px
@@ -418,6 +418,8 @@ th.next
         width 10%
       &.td-spinner
         width 20%
+      &.orderLine-amount
+        width 10%
       &.td-unit
         width 5%
 
@@ -459,7 +461,7 @@ th.next
         text-align center
         &:first-child
           text-align left
-          width 60%
+          width 50%
           padding-left 5px
         &.td-basket
           width 35px
@@ -467,6 +469,8 @@ th.next
           width 10%
         &.td-spinner
           width 20%
+        &.orderLine-amount
+          width 10%
         &.td-unit
           width 5%
         .product-pic
