--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -623,7 +623,7 @@ th.next,
 }
 .order-bottom .order-delivery {
   font-size: 16px;
-  margin-right: 190px;
+  margin-right: 210px;
   height: 34px;
   line-height: 34px;
 }
@@ -631,6 +631,15 @@ th.next,
   display: inline-block;
   vertical-align: middle;
   line-height: 16px;
+}
+.order-bottom .delete-order-from-history {
+  float: right;
+  margin: 0 5px;
+  font-size: 24px;
+  color: #f00;
+}
+.order-bottom .delete-order-from-history:hover {
+  text-decoration: none;
 }
 .ace-spinner {
   display: inline-block;
