--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -545,13 +545,20 @@ th.next
   margin-top 5px
   .order-delivery
     font-size 16px
-    margin-right 190px
+    margin-right 210px
     height 34px
     line-height 34px
     span
       display inline-block
       vertical-align middle
       line-height 16px
+  .delete-order-from-history
+    float right
+    margin 0 5px
+    font-size 24px
+    color #ff0000
+    &:hover
+      text-decoration none
 
 .ace-spinner
   display inline-block
