--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -1,6 +1,10 @@
 @import 'common.css'
 
 /* страница регистрации */
+
+.login-layout .main-content
+  border 0
+
 .login-container
   .widget-box
     visibility hidden
